# exoplanet-detection-research-work

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: ablation.yaml  base.yaml  benchmark.yaml  experiment_example.yaml  experiments.yaml  fusion_train_example.yaml  inference.yaml  models.yaml  report.yaml  representation_example.yaml  tce_example.yaml  train_example.yaml  training_research.yaml  update.yaml
data/: tic_training_catalog.csv  tics_negative.csv  tics_positive.csv  tics_positive_retry.csv
docs/: CO_RESEARCHER_SETUP.txt  CROSS_PLATFORM_COMPATIBILITY.md  EXODET_GITBASH_SETUP_GUIDE.md  EXODET_RESEARCH_GUIDE.txt  ablation.md  benchmarking.md  benchmarking_progress.md  dataset_versioning.md  experiments.md  explainability.md  hyperparameter_sweeps.md  incremental_training.md  inference.md  inference_progress.md  ml_progress.md  models_progress.md  parameter_estimation.md  report_generation.md  representation_progress.md  reproducibility.md  reproducibility_workflow.md  scientific_software.md  statistics.md  training_research_progress.md
scripts/: benchmark_ml.py  benchmark_models.py  benchmark_representation.py  benchmark_tce.py  benchmark_training.py  build_catalog.py  calibrate.py  compare_models.py  evaluate_research.py  pretrain.py  reproduce.py  run_ablation.py  run_benchmark.py  run_experiment.py  run_inference.py  run_reproducibility.py  run_sweep.py  update_dataset.py
tests/: conftest.py  ml_fixtures.py  representation_helpers.py  scientific_tolerances.py  test_ablation.py  test_benchmarking.py  test_catalog.py  test_cli.py  test_config.py  test_data.py  test_experiments.py  test_inference.py  test_ml.py  test_ml_integration.py  test_models.py  test_paths.py  test_preprocessing.py  test_preprocessing_integration.py  test_preprocessing_performance.py  test_process_metrics.py  test_registry.py  test_reporting.py  test_representation.py  test_representation_integration.py  test_representation_performance.py  test_reproducibility.py  test_tce.py  test_tce_integration.py  test_tce_performance.py  (+3 more)
(+170 files in other folders)
