[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exodet"
version = "0.1.0"
description = "Config-driven, publication-quality pipeline for exoplanet detection from photometric light curves."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ExoDet Contributors" }]
keywords = ["exoplanets", "astronomy", "light curves", "machine learning", "transit detection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.1",
    "matplotlib>=3.8",
    "PyYAML>=6.0",
    "astropy>=6.0",
    "lightkurve>=2.4",
    "wotan>=1.10",
    "statsmodels>=0.14",
    "scikit-learn>=1.3",
    "tqdm>=4.66",
]

[project.optional-dependencies]
ml = [
    "torch>=2.1",
    "tensorboard>=2.14",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "black>=24.0",
    "mypy>=1.8",
    "types-PyYAML",
    "pre-commit>=3.6",
]
docs = [
    "sphinx>=7.2",
    "sphinx-rtd-theme>=2.0",
]

[project.scripts]
exodet = "exodet.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 90
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "SIM"]
ignore = ["D107", "D105"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[tool.black]
line-length = 90
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
packages = ["exodet"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "slow: tests that download data or train models",
]
